[package]
name = "safe_vault"
version = "0.2.0"
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "This is Pre alpha, and not useful, no code worth looking at."
documentation = "http://maidsafe.net/safe_vault/latest"
repository = "https://github.com/maidsafe/safe_vault"
readme = "README.md"
license = "GPL-3.0"
homepage = "http://maidsafe.net"

[dependencies]
# ---- Non-MaidSafe -----
cbor = "*"
log = "*"
env_logger = "*"
rand = "*"
rustc-serialize = "*"
sodiumoxide = "0.0.8"
tempdir = "*"
time = "*"

# ---- MaidSafe ------
crust = "0.5.*"
lru_time_cache = "0.2.*"
routing ={ git="https://github.com/waynenilsen/routing.git", rev="256a7f3"} 

[features]
use-mock-routing = []
